# dePrivater

./: .gitignore  CMakeLists.txt  buildScript.sh
Src/: main.cpp
Src/DePrivater/Headers/: dePrivater.hpp
Src/DePrivater/Sources/: dePrivater.cpp
Src/Logger/Headers/: logger.hpp
Src/Tests/: CMakeLists.txt
Src/Tests/Sources/: dePrivateTests.cpp
Src/Utils/Headers/: utils.hpp
Src/Utils/Sources/: utils.cpp
